<resources>
    <string name="app_name">Lab3BorisovaKA</string>
    <string name="TextView">Главный экран</string>
    <string name="call_second_activity">Перейти на второй экран</string>
    <string name="call_three_activity">Перейти на третий экран</string>
    <string name="second_activity">Второй экран</string>
    <string name="three_activity">Третий экран</string>
    <string name="go_to_first_activity_from_second">Вернуться на главный экран</string>
    <string name="go_to_first_activity_from_third">Вернуться на главный экран</string>
    <string name="editMessage">Главный экран</string>
</resources>